--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -1,8 +1,10 @@
 {% load cache %}
 {% load pwa %}
 {% load static %}
+<html lang="en">
 
 <head>
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Jumping Protein</title>
     <meta name="title" content="Jumping Protein">
@@ -18,7 +20,8 @@
     <link rel="manifest" href="{% static 'jumpingprotein/manifest.json' %}">
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static "webapp/css/normalize.css" %}">
     <link rel="stylesheet" href="{% static "webapp/css/style.css" %}">
@@ -54,6 +57,7 @@
         line-height: 550px;
     }
 </style>
+
 
 <div id="about-header-wrapper">
     <div id="topheader" class="container">
@@ -151,6 +155,7 @@
 
 </footer>
 
+
 <script src="{% static 'js/jquery.min.js' %}"></script>
 <!-- jQuery Easing -->
 <script src="{% static 'js/jquery.easing.1.3.js' %}"></script>
@@ -176,3 +181,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+
