--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -13,7 +13,8 @@
 
     <!-- CSS only -->
     <link href="{% static 'photos/css/lightbox.css' %}" rel="stylesheet"/>
-
+    <link rel="manifest" href="{% static '/manifest.json' %}">
+    {% progressive_web_app_meta %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
@@ -55,7 +56,8 @@
                 <a class="nav-link" href="{% url 'article:articles' %}">Blog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link current" href="{% url 'gallery' %}">Gallery <span class="sr-only">(current)</span></a>
+                <a class="nav-link current" href="{% url 'gallery' %}">Gallery <span
+                        class="sr-only">(current)</span></a>
             </li>
 
         </ul>
