--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -1,5 +1,5 @@
 {% extends 'webapp/base.html' %}
-
+{% load pwa %}
 {% load cache %}
 {% load static %}
 <!DOCTYPE html>
@@ -17,7 +17,9 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'jumpingprotein/manifest.json' %}">
+    <link rel="manifest" href="{% static '/manifest.json' %}">
+    {% progressive_web_app_meta %}
+
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
