--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -17,7 +17,9 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'jumpingprotein/manifest.json' %}">
+    <link rel="manifest" href="{% static '/manifest.json' %}">
+    {% progressive_web_app_meta %}
+
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
