--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -13,7 +13,7 @@
 
     <!-- CSS only -->
     <link href="{% static 'photos/css/lightbox.css' %}" rel="stylesheet"/>
-    <link rel="manifest" href="{% static '/manifest.json' %}">
+    <link rel="manifest" href="{% static 'manifest.json' %}">
     {% progressive_web_app_meta %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
