--- a/webapp/templates/webapp/about.html
+++ b/webapp/templates/webapp/about.html
@@ -17,7 +17,7 @@
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static '/manifest.json' %}">
+    <link rel="manifest" href="{% static 'manifest.json' %}">
     {% progressive_web_app_meta %}
 
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
