--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -25,7 +25,7 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/style.css" %}">
 
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
-    <link rel="dns-prefetch" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    <link rel="preload" as="style" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/normalize.css" %}">
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/animate.css' %}">
