--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -19,23 +19,24 @@
     <meta name="language" content=serviceworker"English">
     <meta name="revisit-after" content="7 days">
     <meta name="author" content="Esnath Divasoni">
-    <link rel="manifest" href="{% static 'manifest.json' %}">
     {% progressive_web_app_meta %}
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/style.css" %}">
+
+    <link rel="manifest" href="{% static 'manifest.json' %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/style.css" %}">
 
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
-    <link rel="preload" as="style" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    <link rel="prefetch" as="style" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/normalize.css" %}">
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/animate.css' %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static "webapp/css/normalize.css" %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/animate.css' %}">
     <!-- Icomoon Icon Fonts-->
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/icomoon.css' %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/icomoon.css' %}">
     <!-- Bootstrap  -->
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/bootstrap.css' %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/bootstrap.css' %}">
     <!-- Superfish -->
-    <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/superfish.css' %}">
+    <link rel="prefetch" as="style" onload="this.rel = 'stylesheet'" href="{% static 'webapp/css/superfish.css' %}">
 
-    <link rel="preload" as="font" href="{% static "webapp/css/fonts.css" %}" type="font/woff2" crossorigin=""
+    <link rel="prefetch" as="font" href="{% static "webapp/css/fonts.css" %}" type="font/woff2" crossorigin=""
           media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
