--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -27,16 +27,16 @@
     <link href="http://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet"/>
     <link rel="prefetch" as="style" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-    <link rel="rel" href="{% static "webapp/css/normalize.css" %}">
-    <link rel="rel" href="{% static 'webapp/css/animate.css' %}">
+    <link href="{% static "webapp/css/normalize.css" %}">
+    <link href="{% static 'webapp/css/animate.css' %}">
     <!-- Icomoon Icon Fonts-->
-    <link rel="rel" href="{% static 'webapp/css/icomoon.css' %}">
+    <link href="{% static 'webapp/css/icomoon.css' %}">
     <!-- Bootstrap  -->
-    <link rel="rel" href="{% static 'webapp/css/bootstrap.css' %}">
+    <link href="{% static 'webapp/css/bootstrap.css' %}">
     <!-- Superfish -->
-    <link rel="rel" href="{% static 'webapp/css/superfish.css' %}">
+    <link href="{% static 'webapp/css/superfish.css' %}">
 
-    <link rel="rel" href="{% static "webapp/css/fonts.css" %}" type="text/css" crossorigin=""
+    <link href="{% static "webapp/css/fonts.css" %}" type="text/css"
           media="all"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv=X-UA-Compatible content=" IE=edge,chrome=1">
