--- a/photos/templates/photos/gallery.html
+++ b/photos/templates/photos/gallery.html
@@ -37,7 +37,7 @@
         }
     </style>
 </head>
-<nav class="navbar navbar-expand-lg navbar-custom">
+<nav class="navbar navbar-expand-lg bg-dark">
     <a class="navbar-brand" href="{% url 'about' %}">GCET</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
