--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -237,14 +237,11 @@
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4 text-center animate-box">
-        <a href="#" class="btn btn-primary btn-lg">See Gallery</a>
+        <a href="{% url 'gallery' %}" class="btn btn-primary btn-lg">See Gallery</a>
     </div>
 </div>
 
-
-</div>
-</div>
-
+<br><br>
 
 <div id="fh5co-content-section" class="fh5co-section-gray">
     <div class="container">
